--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "primeicons": "^1.0.0",
+    "primeng": "^6.1.6",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
